other: master -> main (#1349)
* other: master -> main

I'm so used to using `main` branch now that it's actually kinda annoying
to use `master` for just this repo... so might as well rename it now.

* overzealous change

* wording

* some wording

* allow auto-cancel for tests if not main

--- a/.github/workflows/clear-workflow-cache.yml
+++ b/.github/workflows/clear-workflow-cache.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Clear cache
         run: |
           if [[ -n "${{ github.event.schedule }}" ]]; then
-            python ./scripts/clear_cache.py keep-master
+            python ./scripts/clear_cache.py keep-main
             sleep 5
-            python ./scripts/clear_cache.py keep-master
+            python ./scripts/clear_cache.py keep-main
           elif [[ -z "${{ github.event.inputs.id }}" ]]; then
             python ./scripts/clear_cache.py ${{ github.event.pull_request.number }}
             sleep 5
