--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -40,8 +40,8 @@ env:
   CARGO_HUSKY_DONT_INSTALL_HOOKS: true
 
 test_task:
-  auto_cancellation: false
-  only_if: $CIRRUS_BUILD_SOURCE != "api" && ($CIRRUS_BRANCH == "master" || $CIRRUS_PR != "")
+  auto_cancellation: $CIRRUS_BRANCH != "main"
+  only_if: $CIRRUS_BUILD_SOURCE != "api" && ($CIRRUS_BRANCH == "main" || $CIRRUS_PR != "")
   skip: "!changesInclude('.cargo/**', '.cirrus.yml', 'sample_configs/**', 'src/**', 'tests/**', 'build.rs', 'Cargo.lock', 'Cargo.toml', 'clippy.toml', 'rustfmt.toml')"
   matrix:
     - name: "FreeBSD 13 Test"
