--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,4 +2,4 @@ mkdocs == 1.5.3
 mkdocs-material == 9.5.3
 mdx_truly_sane_lists == 1.3
 mike == 2.0.0
-
+mkdocs-git-revision-date-localized-plugin == 1.2.2
