--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,8 +133,10 @@ assert_cmd = "2.0.12"
 cargo-husky = { version = "1.5.0", default-features = false, features = [
     "user-hooks",
 ] }
-portable-pty = "0.8.1"
 predicates = "3.0.3"
+
+[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dev-dependencies]
+portable-pty = "0.8.1"
 
 [build-dependencies]
 clap = { version = "4.4.14", features = ["default", "cargo", "wrap_help"] }
