--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,6 +178,14 @@ jobs:
               rust: stable,
             }
 
+          # The unofficial MSRV.
+          - {
+              os: "ubuntu-latest",
+              target: "x86_64-unknown-linux-gnu",
+              cross: false,
+              rust: "1.70.0",
+            }
+
           # Beta
           - {
               os: "ubuntu-latest",
