--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -70,8 +70,9 @@ jobs:
         run: |
           cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info --locked --target=${{ matrix.info.target }}
 
+      # TODO: Might be good to allow this to retry.
       - name: Upload to codecov.io
-        uses: codecov/codecov-action@d9f34f8cd5cb3b3eb79b3e4b5dae3a16df499a70 # 3.1.1
+        uses: codecov/codecov-action@eaaf4bedf32dbdc6b720b63067d99c4d77d6047d # 3.1.4
         with:
           files: lcov.info
           fail_ci_if_error: true
