--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,7 @@ default = ["deploy"]
 anyhow = "1.0.79"
 backtrace = "0.3.69"
 cfg-if = "1.0.0"
-clap = { version = "4.4.16", features = ["default", "cargo", "wrap_help"] }
+clap = { version = "4.4.18", features = ["default", "cargo", "wrap_help"] }
 concat-string = "1.0.1"
 crossterm = "0.27.0"
 ctrlc = { version = "3.4.2", features = ["termination"] }
@@ -85,6 +85,7 @@ fern = { version = "0.6.2", optional = true }
 hashbrown = "0.14.3"
 humantime = "2.1.0"
 indexmap = "2.1.0"
+indoc = "2.0.4"
 itertools = "0.12.0"
 kstring = { version = "2.0.0", features = ["arc"] }
 log = { version = "0.4.20", optional = true }
@@ -139,11 +140,12 @@ predicates = "3.0.4"
 portable-pty = "0.8.1"
 
 [build-dependencies]
-clap = { version = "4.4.16", features = ["default", "cargo", "wrap_help"] }
-clap_complete = "4.4.6"
+clap = { version = "4.4.18", features = ["default", "cargo", "wrap_help"] }
+clap_complete = "4.4.8"
 clap_complete_fig = "4.4.2"
 clap_complete_nushell = "4.4.2"
 clap_mangen = "0.2.17"
+indoc = "2.0.4"
 
 [package.metadata.deb]
 section = "utility"
