--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,10 +72,11 @@ deploy = ["battery", "gpu", "zfs"]
 default = ["deploy"]
 
 [dependencies]
+
 anyhow = "1.0.79"
 backtrace = "0.3.69"
 cfg-if = "1.0.0"
-clap = { version = "4.5.0", features = ["default", "cargo", "wrap_help"] }
+clap = { version = "4.5.0", features = ["default", "cargo", "wrap_help", "derive"] }
 concat-string = "1.0.1"
 crossterm = "0.27.0"
 ctrlc = { version = "3.4.2", features = ["termination"] }
@@ -136,7 +137,7 @@ predicates = "3.1.0"
 portable-pty = "0.8.1"
 
 [build-dependencies]
-clap = { version = "4.5.0", features = ["default", "cargo", "wrap_help"] }
+clap = { version = "4.5.0", features = ["default", "cargo", "wrap_help", "derive"] }
 clap_complete = "4.5.0"
 clap_complete_fig = "4.5.0"
 clap_complete_nushell = "4.5.0"
