--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -413,7 +413,7 @@ jobs:
         uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
         with:
           retention-days: 3
-          name: release-build-deb
+          name: release-build-deb-${{ matrix.info.target }}
           path: release
 
   build-rpm:
@@ -497,5 +497,5 @@ jobs:
         uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
         with:
           retention-days: 3
-          name: release-build-rpm
+          name: release-build-rpm-${{ matrix.info.target }}
           path: release
