--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Get release artifacts
         uses: actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935 # v4.1.1
         with:
-          name: release-*
+          pattern: release-*
           path: release
           merge-multiple: true
 
@@ -107,7 +107,7 @@ jobs:
       - name: Get release artifacts
         uses: actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935 # v4.1.1
         with:
-          name: release-*
+          pattern: release-*
           path: release
           merge-multiple: true
 
@@ -116,7 +116,7 @@ jobs:
           echo "Generated $(ls ./release | wc -l) files:"
           du -h -d 0 ./release/*
 
-      - name: Upload all saved release files
+      - name: Create release and add release files
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # 0.1.15
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
