--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,25 +15,16 @@ cache_template: &CACHE_TEMPLATE
     folder: $HOME/.cargo/registry
     reupload_on_changes: "true"
     fingerprint_script:
-      - |
-        if ! command -v md5 &> /dev/null; then
-          md5sum Cargo.lock
-        else
-          md5 Cargo.lock
-        fi
+      - $HOME/.cargo/bin/rustc --version
+      - cat Cargo.lock
       - echo $CIRRUS_OS
       - echo $CIRRUS_TASK_NAME
   target_cache:
     folder: target
     reupload_on_changes: "true"
     fingerprint_script:
-      - . $HOME/.cargo/env && rustc --version
-      - |
-        if ! command -v md5 &> /dev/null; then
-          md5sum Cargo.lock
-        else
-          md5 Cargo.lock
-        fi
+      - $HOME/.cargo/bin/rustc --version
+      - cat Cargo.lock
       - echo $CIRRUS_OS
       - echo $CIRRUS_TASK_NAME
 
