--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -49,10 +49,11 @@ jobs:
     needs: [build-release]
     steps:
       - name: Get release artifacts
-        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+        uses: actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935 # v4.1.1
         with:
-          name: release
+          pattern: release-*
           path: release
+          merge-multiple: true
 
       - name: Print out all release files
         run: |
@@ -72,7 +73,7 @@ jobs:
         run: sleep 10
         if: github.event.inputs.isMock != 'mock'
 
-      - name: Upload all saved release files if not mock
+      - name: Add all release files to nightly release if not mock
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # 0.1.15
         if: github.event.inputs.isMock != 'mock'
         with:
