--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -48,6 +48,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-release]
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          fetch-depth: 1
+
       - name: Get release artifacts
         uses: actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935 # v4.1.1
         with:
@@ -61,11 +66,8 @@ jobs:
           du -h -d 0 ./release/*
 
       - name: Delete tag and release if not mock
-        uses: ClementTsang/delete-tag-and-release@v0.4.0
         if: github.event.inputs.isMock != 'mock'
-        with:
-          delete_release: true
-          tag_name: nightly
+        run: gh release delete nightly --cleanup-tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
