--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -11,3 +11,4 @@ max_width = 100
 # group_imports = "StdExternalCrate"
 # wrap_comments = true
 # format_code_in_doc_comments = true
+# format_macro_matchers = true
