--- a/tests/invalid_configs/invalid_default_widget_count.toml
+++ b/tests/invalid_configs/invalid_default_widget_count.toml
@@ -1,3 +1,3 @@
-[flags]
-default_widget_type="CPU"
-default_widget_count=18446744073709551616
+[general]
+default_widget_type = "CPU"
+default_widget_count = 18446744073709551616
